# pylings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RELEASE.md  Readme.md  SECURITY.md  info.toml  mkdocs.yml  pylings.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
checks/async/: async1.py  async10.py  async2.py  async3.py  async4.py  async5.py  async6.py  async7.py  async8.py  async9.py
checks/classes/: classes1.py  classes10.py  classes11.py  classes12.py  classes2.py  classes3.py  classes4.py  classes5.py  classes6.py  classes7.py  classes8.py  classes9.py
checks/collections/: collections1.py  collections10.py  collections2.py  collections3.py  collections4.py  collections5.py  collections6.py  collections7.py  collections8.py  collections9.py
checks/comprehensions/: comprehensions1.py  comprehensions10.py  comprehensions2.py  comprehensions3.py  comprehensions4.py  comprehensions5.py  comprehensions6.py  comprehensions7.py  comprehensions8.py  comprehensions9.py
checks/conditionals/: conditionals1.py  conditionals10.py  conditionals2.py  conditionals3.py  conditionals4.py  conditionals5.py  conditionals6.py  conditionals7.py  conditionals8.py  conditionals9.py
checks/context_managers/: context_managers1.py  context_managers2.py  context_managers3.py  context_managers4.py  context_managers5.py  context_managers6.py  context_managers7.py  context_managers8.py
checks/dataclasses/: dataclasses1.py  dataclasses2.py  dataclasses3.py  dataclasses4.py  dataclasses5.py  dataclasses6.py  dataclasses7.py  dataclasses8.py
checks/datetime/: datetime1.py  datetime2.py  datetime3.py  datetime4.py  datetime5.py  datetime6.py  datetime7.py  datetime8.py
checks/decorators/: decorators1.py  decorators10.py  decorators2.py  decorators3.py  decorators4.py  decorators5.py  decorators6.py  decorators7.py  decorators8.py  decorators9.py
checks/dictionaries/: dictionaries1.py  dictionaries10.py  dictionaries2.py  dictionaries3.py  dictionaries4.py  dictionaries5.py  dictionaries6.py  dictionaries7.py  dictionaries8.py  dictionaries9.py
checks/enums/: enums1.py  enums2.py  enums3.py  enums4.py  enums5.py  enums6.py
checks/exceptions/: exceptions1.py  exceptions10.py  exceptions2.py  exceptions3.py  exceptions4.py  exceptions5.py  exceptions6.py  exceptions7.py  exceptions8.py  exceptions9.py
checks/file_io/: file_io1.py  file_io10.py  file_io2.py  file_io3.py  file_io4.py  file_io5.py  file_io6.py  file_io7.py  file_io8.py  file_io9.py
checks/functional/: functional1.py  functional10.py  functional2.py  functional3.py  functional4.py  functional5.py  functional6.py  functional7.py  functional8.py  functional9.py
checks/functions/: functions1.py  functions10.py  functions2.py  functions3.py  functions4.py  functions5.py  functions6.py  functions7.py  functions8.py  functions9.py
checks/generators/: generators1.py  generators10.py  generators2.py  generators3.py  generators4.py  generators5.py  generators6.py  generators7.py  generators8.py  generators9.py
checks/itertools/: itertools1.py  itertools2.py  itertools3.py  itertools4.py  itertools5.py  itertools6.py  itertools7.py  itertools8.py
checks/json/: json1.py  json2.py  json3.py  json4.py  json5.py  json6.py  json7.py  json8.py
checks/lists/: lists1.py  lists10.py  lists2.py  lists3.py  lists4.py  lists5.py  lists6.py  lists7.py  lists8.py  lists9.py
checks/loops/: loops1.py  loops10.py  loops2.py  loops3.py  loops4.py  loops5.py  loops6.py  loops7.py  loops8.py  loops9.py
checks/modules/: modules1.py  modules2.py  modules3.py  modules4.py  modules5.py  modules6.py  modules7.py  modules8.py
checks/oop_advanced/: oop_advanced1.py  oop_advanced10.py  oop_advanced11.py  oop_advanced12.py  oop_advanced2.py  oop_advanced3.py  oop_advanced4.py  oop_advanced5.py  oop_advanced6.py  oop_advanced7.py  oop_advanced8.py  oop_advanced9.py
checks/pathlib/: pathlib1.py  pathlib2.py  pathlib3.py  pathlib4.py  pathlib5.py  pathlib6.py
checks/recursion/: recursion1.py  recursion2.py  recursion3.py  recursion4.py  recursion5.py  recursion6.py  recursion7.py  recursion8.py
checks/regex/: regex1.py  regex10.py  regex2.py  regex3.py  regex4.py  regex5.py  regex6.py  (+3 more)
docs/: DEMO_GIF.md  RELEASE_PROCESS.md  demo.tape
docs-site/: CNAME  contributing.md  curriculum.md  index.md  interface.md  local-docs.md  quick-start.md  roadmap.md  robots.txt
pylings/: __main__.py  app.py  cli.py  pylings.tcss
pythonlings/: app.py  cli.py
scripts/: fetch_python_docs.py  generate_demo_gif.sh
solutions/: _answers.py  functional5.py
(+505 files in other folders)
