[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylings"
version = "0.1.0"
description = "Rustlings-style interactive Python exercises."
readme = "Readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual[syntax]>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pylings = "pylings.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pylings"]

[tool.hatch.build.targets.wheel.force-include]
"pylings/pylings.tcss" = "pylings/pylings.tcss"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
