[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-learnings"
version = "0.1.0"
description = "Python learnings, Rustlings-style, in a terminal TUI."
readme = "Readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "python",
    "python-exercises",
    "learn-python",
    "python-learnings",
    "beginner-python",
    "coding-practice",
    "rustlings",
    "textual",
    "tui",
    "cli",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "textual[syntax]>=8.0.0",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/abhiksark/pylings"
Repository = "https://github.com/abhiksark/pylings"
Issues = "https://github.com/abhiksark/pylings/issues"
Changelog = "https://github.com/abhiksark/pylings/blob/main/CHANGELOG.md"
Documentation = "https://github.com/abhiksark/pylings#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pylings = "pylings.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pylings"]

[tool.hatch.build.targets.wheel.force-include]
"pylings/pylings.tcss" = "pylings/pylings.tcss"
"info.toml" = "pylings/curriculum/info.toml"
"exercises" = "pylings/curriculum/exercises"
"checks" = "pylings/curriculum/checks"
"solutions" = "pylings/curriculum/solutions"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
